<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/servicios"
            android:icon="@drawable/servicios"
            android:title="@string/servicios" />
        <item
            android:id="@+id/favoritos"
            android:icon="@drawable/favoritos"
            android:title="@string/favotiros" />
        <item
            android:id="@+id/senderos"
            android:icon="@drawable/senderos"
            android:title="@string/sender" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/info"
                android:icon="@drawable/info"
                android:title="@string/Informacion" />
            <item
                android:id="@+id/cerrarS"
                android:icon="@android:drawable/ic_menu_set_as"
                android:title="@string/CerrarS" />

        </menu>
    </item>

</menu>
