<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="com.jhonatan.laboratorio_ii.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/Usuario"
            android:textColor="@color/darkviolet"
            android:gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/eUsu"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/Contraseña"
            android:textSize="20sp"
            android:textColor="@color/darkviolet"
            android:gravity="center"/>
        <EditText
            android:id="@+id/eContra"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/Rcontraseña"
            android:textSize="20sp"
            android:textColor="@color/darkviolet"
            android:gravity="center"/>
        <EditText
            android:id="@+id/eRcontra"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/Correo"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"/>
        <EditText
            android:id="@+id/eCorreo"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sexo"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/masculino"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:textColor="@color/white"
                android:text="@string/femenino" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/eFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:textSize="15sp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:onClick="onEditTextClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nacimiento"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/sLugar">
        </Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/bRegistrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Registrar"
        android:background="@color/darkviolet"
        android:textColor="@color/white"
        android:onClick="onButtonClicked"/>
</LinearLayout>
