<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/burlywood"
    tools:context="com.jhonatan.laboratorio_ii.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/eCorreo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/eContraseña"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/Aceptar"
        android:background="@color/darkgoldenrod"
        android:onClick="onButtonClicked"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Registrar"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:gravity="center_horizontal"
        android:onClick="onClickedTextWiew"/>

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignInGoogle"
        android:layout_gravity="center_horizontal"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnSignInFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
